--- a/packages/just/.env.secure.yaml
+++ b/packages/just/.env.secure.yaml
@@ -1,10 +1,6 @@
+extends: .
 env:
-  DOCKER_REGISTRY: docker.justinkonratt.com
-  ORGANIZATION: codesdowork
-  PROJECT: monorepo
-  IMAGE_BASE: ${DOCKER_REGISTRY}/${ORGANIZATION}/${PROJECT}
-  STACK_NAME: ${ORGANIZATION}_${PROJECT}_just
-  DEPLOY_PATH: /opt/${ORGANIZATION}/${PROJECT}
+  JUST_STACK_NAME: ${STACK_NAME}_just
 
   DASHBOARD_CONFIG_DIR: /dashy/config
 
