--- a/packages/zinzow/.env.secure.yaml
+++ b/packages/zinzow/.env.secure.yaml
@@ -1,9 +1,6 @@
+extends: .
 env:
   DOMAIN: agrarservicenordost.de
-  DOCKER_REGISTRY: docker.justinkonratt.com
-  ORGANIZATION: agrar-zinzow
-  PROJECT: monorepo
-  IMAGE_BASE: ${DOCKER_REGISTRY}/${ORGANIZATION}/${PROJECT}
 secrets:
   CMS:
     collectionId: 2c6e344c-5a88-41d6-8c33-78f52dbbb7e3
