--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
         "replace-in-files-cli": "^3.0.0",
         "rimraf": "^6.0.1",
         "secretlint": "^8.2.4",
+        "simple-git": "^3.27.0",
         "stream-browserify": "^3.0.0",
         "svelte": "^4.2.18",
         "svelte-check": "^3.8.5",
