--- a/packages/nx-plugins/docker/package.json
+++ b/packages/nx-plugins/docker/package.json
@@ -9,6 +9,5 @@
     "main": "./src/index.js",
     "typings": "./src/index.d.ts",
     "private": true,
-    "executors": "./executors.json",
-    "generators": "./generators.json"
+    "executors": "./executors.json"
 }
