feat(nx-plugins): improved executors

--- a/packages/just/.env.secure.yaml
+++ b/packages/just/.env.secure.yaml
@@ -1,6 +1,6 @@
 extends: .
 env:
-  JUST_STACK_NAME: ${STACK_NAME}_just
+  STACK_NAME: ${ORGANIZATION}_${PROJECT}_just
 
   DASHBOARD_CONFIG_DIR: /dashy/config
 
