--- a/packages/nx-plugins/docker/project.json
+++ b/packages/nx-plugins/docker/project.json
@@ -1,5 +1,5 @@
 {
-    "name": "@codesdowork/nx-plugins-docker-compose",
+    "name": "nx-plugins-docker-compose",
     "$schema": "../../../node_modules/nx/schemas/project-schema.json",
     "sourceRoot": "packages/nx-plugins/docker-compose/src",
     "projectType": "library",
