fix: fixed image builds

--- a/packages/just/documentation/project.json
+++ b/packages/just/documentation/project.json
@@ -1,5 +1,5 @@
 {
-    "name": "documentation",
+    "name": "just-documentation",
     "$schema": "../../../node_modules/nx/schemas/project-schema.json",
     "projectType": "application",
     "targets": {
