--- a/packages/just/documentation/Dockerfile
+++ b/packages/just/documentation/Dockerfile
@@ -1,8 +1,8 @@
 ARG IMAGE_BASE
 ARG PROJECT_VERSION="latest"
 
-ARG APP_NAME=documentation
-ARG APP_DIR=documentation
+ARG APP_NAME=just-documentation
+ARG APP_DIR=just/documentation
 
 FROM $IMAGE_BASE/base:$PROJECT_VERSION AS base
 FROM $IMAGE_BASE/workspace-deps:$PROJECT_VERSION AS workspace-deps
