--- a/packages/nx-plugins/docker/project.json
+++ b/packages/nx-plugins/docker/project.json
@@ -1,16 +1,8 @@
 {
-    "name": "nx-plugins-docker-compose",
+    "name": "nx-plugins-docker",
     "$schema": "../../../node_modules/nx/schemas/project-schema.json",
-    "sourceRoot": "packages/nx-plugins/docker-compose/src",
+    "sourceRoot": "packages/nx-plugins/docker/src",
     "projectType": "library",
     "tags": ["nx-plugins"],
-    "targets": {
-        "test": {
-            "executor": "@nx/jest:jest",
-            "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
-            "options": {
-                "jestConfig": "packages/nx-plugins/docker-compose/jest.config.ts"
-            }
-        }
-    }
+    "targets": {}
 }
