--- a/packages/nx-plugins/secrets-manager/package.json
+++ b/packages/nx-plugins/secrets-manager/package.json
@@ -1,6 +1,5 @@
 {
-    "name": "@codesdowork/nx-plugins-secrets-manager",
-    "version": "0.0.5",
+    "name": "nx-plugins-secrets-manager",
     "description": ".env variables manager for secrets in NX monorepos",
     "keywords": [
         "nx",
@@ -26,6 +25,7 @@
     "dependencies": {
         "@nx/devkit": "20.0.3",
         "inquirer": "10.2.2",
+        "simple-git": "3.27.0",
         "tslib": "2.6.3",
         "yaml": "2.5.1",
         "zod": "3.23.8"
