--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
         "url": "https://github.com/CodesDoWork/monorepo.git"
     },
     "scripts": {
-        "docker:build-workspace": "docker compose -f docker-compose-workspace.yaml build base && docker compose -f docker-compose-workspace.yaml build workspace && docker compose -f docker-compose-workspace.yaml build workspace-deps",
-        "docker:workspace": "docker compose -f docker-compose-workspace.yaml up -d workspace",
+        "docker:build-workspace": "docker compose build base && docker compose build workspace && docker compose build workspace-deps",
+        "docker:workspace": "docker compose up -d workspace",
         "check": "nx format:check && nx run-many -t lint test build",
         "secretlint": "secretlint --secretlintignore .gitignore \"**/*\"",
         "env-files": "nx g env-files DEV,PROD",
