ci: simplify env vars

--- a/.env.secure.yaml
+++ b/.env.secure.yaml
@@ -3,6 +3,5 @@ env:
   ORGANIZATION: codesdowork
   PROJECT: monorepo
   IMAGE_BASE: ${DOCKER_REGISTRY}/${ORGANIZATION}/${PROJECT}
-  STACK_NAME: ${ORGANIZATION}_${PROJECT}
-  DEPLOY_PATH: /opt/${ORGANIZATION}/${PROJECT}
+  BASE_STACK_NAME: ${ORGANIZATION}_${PROJECT}
   TZ: Europe/Berlin
