--- a/packages/just/.env.secure.yaml
+++ b/packages/just/.env.secure.yaml
@@ -1,6 +1,6 @@
 extends: .
 env:
-  STACK_NAME: ${ORGANIZATION}_${PROJECT}_just
+  STACK_NAME: ${BASE_STACK_NAME}_just
 
   DASHBOARD_CONFIG_DIR: /dashy/config
 
