--- a/packages/zinzow/.env.secure.yaml
+++ b/packages/zinzow/.env.secure.yaml
@@ -1,6 +1,7 @@
 extends: .
 env:
   DOMAIN: agrarservicenordost.de
+  STACK_NAME: ${BASE_STACK_NAME}_zinzow
 secrets:
   CMS:
     collectionId: 2c6e344c-5a88-41d6-8c33-78f52dbbb7e3
