--- a/packages/just/website/.env.secure.yaml
+++ b/packages/just/website/.env.secure.yaml
@@ -20,6 +20,7 @@ secrets:
       - GRAVATAR_EMAIL
       - CMS_USER
       - CMS_PASSWORD
+      - PORT
 
   SMTP:
     collectionId: 9bb1f417-7361-4d76-bd15-0c2a90d43141
