--- a/packages/nx-plugins/lighthouse/Dockerfile
+++ b/packages/nx-plugins/lighthouse/Dockerfile
@@ -6,5 +6,5 @@ FROM $IMAGE_BASE/base:$PROJECT_VERSION AS base
 RUN apk add chromium
 RUN yarn global add lighthouse@12.2.1
 
-WORKDIR /lighthouse-reports
+WORKDIR /lighthouse
 ENTRYPOINT ["lighthouse", "--chrome-flags='--headless --no-sandbox'"]
