--- a/packages/just/cms/project.json
+++ b/packages/just/cms/project.json
@@ -3,19 +3,6 @@
     "$schema": "../../../node_modules/nx/schemas/project-schema.json",
     "sourceRoot": "packages/just/cms",
     "projectType": "application",
-    "targets": {
-        "build-image": {
-            "executor": "@codesdowork/nx-plugins-docker:build"
-        },
-        "push-image": {
-            "executor": "@codesdowork/nx-plugins-docker:push"
-        },
-        "pull-image": {
-            "executor": "@codesdowork/nx-plugins-docker:pull"
-        },
-        "trivy": {
-            "executor": "@codesdowork/nx-plugins-test:trivy"
-        }
-    },
+    "targets": {},
     "tags": ["just-cms"]
 }
