--- a/packages/nx-plugins/docker/package.json
+++ b/packages/nx-plugins/docker/package.json
@@ -1,13 +1,13 @@
 {
-    "name": "@codesdowork/nx-plugins-docker-compose",
+    "name": "nx-plugins-docker",
     "version": "0.0.1",
     "dependencies": {
         "@nx/devkit": "20.0.3",
         "tslib": "^2.3.0"
     },
     "type": "commonjs",
-    "main": "./src/index.js",
-    "typings": "./src/index.d.ts",
+    "main": "./src/index.ts",
+    "typings": "./src/index.ts",
     "private": true,
     "executors": "./executors.json"
 }
