--- a/packages/nx-plugins/lighthouse/package.json
+++ b/packages/nx-plugins/lighthouse/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@codesdowork/nx-plugins-test",
+    "name": "nx-plugins-lighthouse",
     "version": "0.0.1",
     "dependencies": {
         "@nx/devkit": "20.0.3",
@@ -7,8 +7,8 @@
         "tslib": "^2.3.0"
     },
     "type": "commonjs",
-    "main": "./src/index.js",
-    "typings": "./src/index.d.ts",
+    "main": "./src/index.ts",
+    "typings": "./src/index.ts",
     "private": true,
     "executors": "./executors.json"
 }
