--- a/packages/shared/renovate/project.json
+++ b/packages/shared/renovate/project.json
@@ -1,21 +1,8 @@
 {
-    "name": "shared/renovate",
+    "name": "shared-renovate",
     "$schema": "../../../node_modules/nx/schemas/project-schema.json",
     "sourceRoot": "packages/shared/renovate",
     "projectType": "application",
-    "targets": {
-        "build-image": {
-            "executor": "@codesdowork/nx-plugins-docker:build"
-        },
-        "push-image": {
-            "executor": "@codesdowork/nx-plugins-docker:push"
-        },
-        "pull-image": {
-            "executor": "@codesdowork/nx-plugins-docker:pull"
-        },
-        "trivy": {
-            "executor": "@codesdowork/nx-plugins-test:trivy"
-        }
-    },
+    "targets": {},
     "tags": []
 }
