--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -24,13 +24,16 @@
             "@codesdowork/nx-plugins-secrets-manager": [
                 "packages/nx-plugins/secrets-manager/src/index.ts"
             ],
-            "@codesdowork/nx-plugins-test": ["packages/nx-plugins/test/src/index.ts"],
+            "@codesdowork/nx-plugins-ci": ["packages/nx-plugins/ci/src/index.ts"],
             "@codesdowork/nx-plugins-utils": ["packages/nx-plugins/utils/src/index.ts"],
             "@codesdowork/shared-health": ["packages/shared/health/src/index.ts"],
             "@codesdowork/shared-logging": ["packages/shared/logging/src/index.ts"],
+            "@codesdowork/shared-trivy": ["packages/shared/trivy/src/index.ts"],
             "@codesdowork/shared-trpc": ["packages/shared/trpc/src/index.ts"],
             "@codesdowork/shared-utils": ["packages/shared/utils/src/index.ts"],
-            "nx-plugins-secrets-manager": ["packages/nx-plugins/secrets-manager/src/index.ts"]
+            "nx-plugins-secrets-manager": ["packages/nx-plugins/secrets-manager/src/index.ts"],
+            "nx-plugins-lighthouse": ["packages/nx-plugins/lighthouse/src/index.ts"],
+            "nx-plugins-docker": ["packages/nx-plugins/docker/src/index.ts"]
         }
     },
     "exclude": ["node_modules", "tmp", "packages/just/website", "packages/zinzow/website"]
