--- a/packages/just/documentation/.gitignore
+++ b/packages/just/documentation/.gitignore
@@ -1,8 +1,2 @@
-docs/.vitepress/*
-!/docs/.vitepress/theme
-!docs/.vitepress/config.js
-
-docs/public/*
-!docs/public/.gitkeep
-
-docs/projects/
+/docs/public
+/docs/projects
