--- a/packages/just/cms/dashboard-config/package.json
+++ b/packages/just/cms/dashboard-config/package.json
@@ -3,10 +3,17 @@
     "version": "1.0.0",
     "icon": "dashboard_customize",
     "type": "module",
+    "private": true,
     "directus:extension": {
         "type": "hook",
         "path": "../../../../dist/packages/just/cms/dashboard-config/index.js",
         "source": "src/index.ts",
         "host": "^11.1.0"
+    },
+    "dependencies": {
+        "@directus/extensions-sdk": "12.0.2",
+        "@directus/types": "12.0.1",
+        "pino": "9.4.0",
+        "yaml": "2.5.1"
     }
 }
