--- a/packages/just/cms/dashboard-config/project.json
+++ b/packages/just/cms/dashboard-config/project.json
@@ -2,25 +2,7 @@
     "name": "just-cms-dashboard-config",
     "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
     "sourceRoot": "packages/just/cms/dashboard-config/src",
-    "targets": {
-        "build": {
-            "executor": "nx:run-commands",
-            "options": {
-                "commands": [
-                    "directus-extension build",
-                    "copyfiles package.json ../../../../dist/packages/just/cms/dashboard-config",
-                    "replace-in-files --string='../../../../dist/packages/just/cms/dashboard-config' --replacement='.' ../../../../dist/packages/just/cms/dashboard-config/package.json"
-                ],
-                "cwd": "packages/just/cms/dashboard-config"
-            }
-        },
-        "dev": {
-            "executor": "nx:run-commands",
-            "options": {
-                "command": "directus-extension build -w --no-minify",
-                "cwd": "packages/just/cms/dashboard-config"
-            }
-        }
-    },
+    "projectType": "library",
+    "targets": {},
     "tags": ["just-cms"]
 }
