--- a/packages/just/music/platform/project.json
+++ b/packages/just/music/platform/project.json
@@ -3,7 +3,6 @@
     "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
     "sourceRoot": "packages/just/music/platform",
     "projectType": "application",
-    "targets": {
-    },
+    "targets": {},
     "tags": []
 }
