--- a/packages/just/website/package.json
+++ b/packages/just/website/package.json
@@ -2,5 +2,6 @@
     "name": "just-website",
     "version": "1.0.0",
     "description": "This app contains my personal website",
-    "type": "module"
+    "type": "module",
+    "private": true
 }
