--- a/packages/nx-plugins/secrets-manager/package.json
+++ b/packages/nx-plugins/secrets-manager/package.json
@@ -33,7 +33,7 @@
     "publishConfig": {
         "access": "public"
     },
-    "main": "./src/index.js",
-    "typings": "./src/index.d.ts",
+    "main": "./src/index.ts",
+    "typings": "./src/index.ts",
     "generators": "./generators.json"
 }
