--- a/packages/zinzow/website/.eslintrc.json
+++ b/packages/zinzow/website/.eslintrc.json
@@ -2,7 +2,7 @@
     "parser": "@typescript-eslint/parser",
     "extends": ["../../../.eslintrc.json"],
     "plugins": ["svelte3", "@typescript-eslint"],
-    "ignorePatterns": ["!**/*", "*.cjs", "vite.config.ts", "node_modules", ".svelte-kit"],
+    "ignorePatterns": ["!**/*", "vite.config.ts", "node_modules", ".svelte-kit"],
     "overrides": [
         {
             "files": ["*.svelte"],
