--- a/packages/just/documentation/.eslintrc.json
+++ b/packages/just/documentation/.eslintrc.json
@@ -1,4 +1,8 @@
 {
     "extends": ["../../../.eslintrc.json"],
-    "ignorePatterns": ["!**/*", "/docs/.vitepress/cache"]
+    "ignorePatterns": ["!**/*", "/docs/.vitepress/cache"],
+    "env": {
+        "node": true,
+        "commonjs": true
+    }
 }
