--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,12 +20,6 @@
         "strictNullChecks": true,
         "paths": {
             "@codesdowork/just-cms-types": ["packages/just/cms/types/src/index.ts"],
-            "@codesdowork/nx-plugins-ci": ["packages/nx-plugins/ci/src/index.ts"],
-            "@codesdowork/nx-plugins-docker": ["packages/nx-plugins/docker/src/index.ts"],
-            "@codesdowork/nx-plugins-secrets-manager": [
-                "packages/nx-plugins/secrets-manager/src/index.ts"
-            ],
-            "@codesdowork/nx-plugins-utils": ["packages/nx-plugins/utils/src/index.ts"],
             "@codesdowork/shared-health": ["packages/shared/health/src/index.ts"],
             "@codesdowork/shared-logging": ["packages/shared/logging/src/index.ts"],
             "@codesdowork/shared-trivy": ["packages/shared/trivy/src/index.ts"],
@@ -38,7 +32,8 @@
             "nx-plugins-lighthouse": ["packages/nx-plugins/lighthouse/src/index.ts"],
             "nx-plugins-secrets-manager": ["packages/nx-plugins/secrets-manager/src/index.ts"],
             "nx-plugins-tsc": ["packages/nx-plugins/tsc/src/index.ts"],
-            "nx-plugins-vitepress": ["packages/nx-plugins/vitepress/src/index.ts"]
+            "nx-plugins-vitepress": ["packages/nx-plugins/vitepress/src/index.ts"],
+            "nx-plugins-utils": ["packages/nx-plugins/utils/src/index.ts"]
         }
     },
     "exclude": ["node_modules", "tmp", "packages/just/website", "packages/zinzow/website"]
