--- a/packages/nx-plugins/lighthouse/package.json
+++ b/packages/nx-plugins/lighthouse/package.json
@@ -3,8 +3,9 @@
     "version": "0.0.1",
     "dependencies": {
         "@nx/devkit": "20.0.3",
-        "dotenv": "16.4.5",
-        "tslib": "^2.3.0"
+        "nx-plugins-docker": "*",
+        "tslib": "2.6.3",
+        "zod": "3.23.8"
     },
     "type": "commonjs",
     "main": "./src/index.ts",
