--- a/packages/nx-plugins/vitepress/package.json
+++ b/packages/nx-plugins/vitepress/package.json
@@ -2,8 +2,9 @@
     "name": "nx-plugins-vitepress",
     "dependencies": {
         "@nx/devkit": "20.0.3",
-        "dotenv": "16.4.5",
-        "tslib": "^2.3.0"
+        "nx": "20.0.3",
+        "tslib": "^2.3.0",
+        "zod": "3.23.8"
     },
     "type": "commonjs",
     "main": "./src/index.ts",
