feat(just-music-downloader): infer tasks using @nx/next plugin

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -5,13 +5,13 @@
         "rootDir": ".",
         "sourceMap": false,
         "declaration": false,
-        "moduleResolution": "Bundler",
+        "moduleResolution": "bundler",
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "importHelpers": true,
-        "target": "es2015",
+        "target": "esnext",
         "module": "esnext",
-        "lib": ["es2017", "dom"],
+        "lib": ["esnext", "dom"],
         "skipLibCheck": true,
         "skipDefaultLibCheck": true,
         "esModuleInterop": true,
