--- a/nx.json
+++ b/nx.json
@@ -103,6 +103,15 @@
             }
         },
         {
+            "plugin": "@nx/next/plugin",
+            "options": {
+                "buildTargetName": "build",
+                "devTargetName": "dev",
+                "startTargetName": "start",
+                "serveStaticTargetName": "serve-static"
+            }
+        },
+        {
             "plugin": "@nx/eslint/plugin",
             "options": {
                 "targetName": "lint"
